--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,20 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-#top-bg {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+#top-page-bg {
+    @apply absolute;
+    @apply inset-0;
     background-image: url('/public/images/bg.jpg');
     background-position: center;
     background-size: cover;
     mask-image: linear-gradient(to bottom, rgba(33, 31, 42, 1), rgba(33, 31, 42, 0));
     opacity: .5;
+    z-index: -1;
 }
 
-#top-bg:after {
+#top-page-bg:after {
     content: '';
     position: absolute;
     top: 0;
