--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,15 +24,12 @@
     opacity: .6;
 }
 
-.glide__slides {
-    transition: none !important;
-}
-
-.glide__slides li {
-    opacity: 0;
-    transition: all 700ms ease-in-out;
-}
-
-li.glide__slide--active {
-    opacity: 1;
+.glide__slide:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(24, 28, 35, .04);
 }
