--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,7 +24,7 @@
     opacity: .6;
 }
 
-.glide__slide:after {
+.glide__slide > div:after {
     content: '';
     position: absolute;
     top: 0;
@@ -32,4 +32,5 @@
     right: 0;
     bottom: 0;
     background-color: rgba(24, 28, 35, .04);
+    z-index: 1;
 }
