--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -1,5 +1,64 @@
 @tailwind utilities;
 
+.filament-forms-text-input-component input,
+button.bg-white,
+.choices__inner,
+.filament-forms-tags-input-component > div,
+.filament-forms-tags-input-component input,
+.filament-forms-markdown-editor-component textarea {
+    @apply bg-primary-dark;
+    @apply border-primary-accent;
+    @apply focus-within:border-secondary-light;
+}
+
+input[type="number"], select {
+    @apply text-white !important;
+    @apply bg-primary-dark !important;
+    @apply border-primary-accent !important;
+}
+
+.choices__list--dropdown, .choices__input, .choices__input--cloned, .choices__list--dropdown input, .choices__list--dropdown .choices__input {
+    @apply bg-primary-dark !important;
+    @apply border-primary-accent !important;
+}
+
+.choices__list--dropdown {
+    @apply shadow-md !important;
+}
+
+.filament-forms-markdown-editor-component > div > .bg-white {
+    @apply bg-primary-dark !important;
+    @apply border-primary-accent !important
+}
+
+.choices__list--dropdown .choices__item--selectable.is-highlighted, .choices__list[aria-expanded] .choices__item--selectable.is-highlighted {
+    @apply bg-secondary-light;
+}
+
+.is-focused .choices__inner,
+.is-open .choices__inner {
+    @apply ring-0 !important;
+    @apply border-secondary-light;
+}
+
+.focus-within\:ring-1 {
+    @apply focus-within:ring-0;
+}
+
+.prose {
+    @apply text-neutral-400;
+    @apply border-0 !important;
+    @apply bg-primary-dark !important;
+}
+
+.text-gray-700 {
+    @apply text-neutral-400;
+}
+
+.text-gray-800 {
+    @apply text-neutral-500;
+}
+
 .focus\:ring, .focus\:ring-2, .focus\:ring-1 {
     @apply ring-0 !important;
 }
@@ -64,8 +123,17 @@
     @apply hover:bg-primary-accent;
 }
 
-.filament, .filament-body {
+.filament, .filament-body, .filepond--root {
     font-family: Barlow, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+}
+
+.filepond--drop-label {
+    @apply bg-primary-dark !important;
+    @apply border-primary-accent !important;
+    @apply text-neutral-400;
+}
+
+.filament, .filament-body {
     @apply bg-primary-dark;
     @apply text-white;
 }
@@ -115,4 +183,34 @@
 .filament-tables-header-cell button {
     @apply text-neutral-400;
     @apply font-medium;
+}
+
+.filament-page-button-action.bg-white {
+    @apply border-primary-accent;
+    @apply bg-primary-accent;
+    @apply text-white;
+    @apply hover:bg-secondary-light;
+    @apply focus:bg-secondary-dark;
+}
+
+.filament-sidebar-nav li > .border-t {
+    @apply border-primary-accent;
+}
+
+.filament-hr {
+    @apply border-primary-accent;
+}
+
+.filament-modal-subheading {
+    @apply text-neutral-400;
+}
+
+.filament-tables-modal-button-action.bg-white {
+    @apply focus:bg-primary-default;
+    @apply hover:text-white;
+    @apply focus:text-white;
+}
+
+.filament-notification .bg-white\/50 {
+    @apply bg-white !important;
 }
