--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -130,5 +130,5 @@ html::-webkit-scrollbar-thumb {
     @apply items-center;
     @apply justify-center;
     @apply bg-primary-accent;
-    @apply bg-repeat;
+    box-shadow: inset 0 0 50px 30px rgba(41, 46, 56, 1);
 }
