--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -130,5 +130,19 @@ html::-webkit-scrollbar-thumb {
     @apply items-center;
     @apply justify-center;
     @apply bg-primary-accent;
-    box-shadow: inset 0 0 50px 30px rgba(41, 46, 56, 1);
+    @apply bg-no-repeat;
+    @apply bg-center;
+    @apply bg-cover;
+    @apply relative;
+}
+
+#page-title-container:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    @apply bg-black/50;
+    z-index: 1;
 }
